test/equality/negative/comp_wrong_ret.mli
val f : int -> int -> string
(*@ comparison *)
